# FER-Thesis-Tools

./: .gitignore  README.md  TODO.md  appendix_figures.tex  compare_canonicals.py  occlude.py  pyproject.toml  zzz_README.md  zzz_compare_two_saliencies.py  zzz_example_of_reading_roi-means-vector.py  zzz_extract_roi-means.py
docs/: TODO.md  landmark_dict_simplified.txt  occluded_testset_composition.md  some_details.md
modules/: basefaces.py  compare_saliency_maps.py  filenames_utils.py  landmark_utils.py  mask_n_heatmap_utils.py  mask_utils.py  models.py  roi_statistics.py  saliencies_folders.py  save_load_utils.py  visualize.py
scripts/: CSM_da_canocniche2 (2) (1).py  CSM_per_persona2 (1) (1).py  compute_anonymization.py  compute_ds_distribution.py  compute_testers_gender_ale.py  compute_testers_ranking_ade.py  compute_testers_ranking_ale.py  compute_testers_sets_for_ranking_and_gender.py  compute_testers_sets_for_ranking_and_gender_ade.py  compute_testers_sets_for_ranking_and_gender_ale.py  generate_h5_test_set.py  generate_latek_images_code_for_comparisons.py  generate_std_saliency.py  merge_images_in_grid.py  normalize_subject_saliency_folder.py  pinken.py  reduce_neutral_to_50.py  regorganize_new_confronti_to_standard.py  regorganize_new_confronti_to_standard_instructions.txt  regorganize_new_machines_confronti_to_standard.py  regorganize_new_machines_confronti_to_standard_instructions.txt  remove_canonicals_with_less_than_epsilon_saliencies.py  remove_from_name_pattern.py  reshape.py  reverse.py  run_compare_canonicals_all.bat  run_compare_canonicals_all.py  (+18 more)
(+14 files in other folders)
