[tool.poetry]
name = "masks"
version = "0.1.0"
description = ""
authors = ["Dragos Buhnila <s331394@studenti.polito.it>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12"
mediapipe = "^0.10.21"
opencv-python = "^4.11.0.86"
matplotlib = "^3.10.3"
pillow = "^11.2.1"
pandas = "^2.3.1"
mplcursors = "^0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
